<resources>
    <string name="app_name">Baking App</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownie">Brownie</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="network_error">A network error has occurred. Please try again later.</string>
    <string name="steps">steps</string>
    <string name="ingredients">ingredients</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="steps_label">Steps:</string>
    <string name="previous_step">Previous Step</string>
    <string name="step_label">Step:</string>
    <string name="next_step">Next Step</string>
    <string name="no_video">No video for this step.</string>
    <string name="no_internet">No internet connection.</string>
    <string name="url">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
</resources>
