<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.bakingapp.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/videoView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-light"
        android:textSize="25sp"
        android:text="@string/step_label"/>
     <TextView
         android:id="@+id/stepDescription"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="13dp" />
        <Button
            android:id="@+id/previous_step_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/previous_step"/>
        <Button
            android:id="@+id/next_step_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/next_step"/>
    </LinearLayout>

</ScrollView>
