<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingapp.MainFragment"
    android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/pieCard"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/cardStyle">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp">
                <TextView
                    android:id="@+id/pieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="350dp"
                    android:text="@string/nutella_pie"
                    style="@style/labelStyle"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/brownieCard"
            style="@style/cardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/brownieName"
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brownie"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/yellowCakeCard"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/yellowCakeName"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow_cake"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cheeseCakeCard"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/cheeseCakeName"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheesecake"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
